[metadata]
name = performer
version = 0.0.1
author = Torque (Tareq) El Dandachi
author_email = tareqdandachi@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tareqdandachi/performer
project_urls =
    Bug Tracker = https://github.com/tareqdandachi/performer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = performer
packages = find:
python_requires = >=3.6

[options.packages.find]
where = performer